--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -15,6 +15,9 @@ RewriteRule ^(\w+)$ controllers/$1.php
 # Example: 'accountabroad.com/user/[action_name]
 RewriteRule ^user/(\w+)$ controllers/user.php?action=$1
 
+# Example: accountabroad.com/user/reset_password/[email address]/[temp hash]
+RewriteRule ^user/reset_password/([^/]*)/(.*)$  /controllers/user.php?action=reset_password&email=$1&temp_hash=$2
+
 # BUDGET
 # Example: 'accountabroad.com/budget/[action_name]
 RewriteRule ^budget/(\w+)$ controllers/budget.php?action=$1
