--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -45,4 +45,4 @@ RewriteRule ^tag/(\w+)/(\w+)$ controllers/tag.php?action=$1&id=$2
 
 # ITEM
 # Example: 'item/delete/[budget_id]/[id]'
-RewriteRule ^item/delete/(\w+)/(\w+)$ controllers/item.php?action=delete?budget_id=$1&id=$2
+RewriteRule ^item/delete/(\w+)/(\w+)$ controllers/item.php?action=delete&budget_id=$1&id=$2
